# LEIPal

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py  models.py
backend/app/api/v1/: lous.py  search.py  stats.py
backend/app/pipeline/: download.py  load.py  parse.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/jurisdictions/: page.tsx
frontend/app/lei/[lei]/: page.tsx
frontend/app/lous/: page.tsx
frontend/app/lous/[lei]/: page.tsx
frontend/app/overview/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: growth-chart.tsx  sidebar.tsx  stat-card.tsx
frontend/lib/: api.ts  jurisdictions.ts
