[tool.poetry]
name = "leipal-backend"
version = "0.1.0"
description = "LEIPal data pipeline and API"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = "^2.0"
psycopg = {extras = ["binary"], version = "^3.2"}
alembic = "^1.14"
polars = "^1.15"
httpx = "^0.28"
python-dotenv = "^1.0"
pydantic-settings = "^2.6"
tqdm = "^4.67"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8"
pytest = "^8.3"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
